plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'com.gradleup.shadow' version '9.5.1'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

dependencies {
    String jUnitVersion = '5.14.4'
    String javaFxVersion = '17.0.7'
    String osName = System.getProperty('os.name').toLowerCase()
    String osArch = System.getProperty('os.arch').toLowerCase()
    String javaFxPlatform

    if (osName.contains('mac')) {
        javaFxPlatform = osArch in ['aarch64', 'arm64'] ? 'mac-aarch64' : 'mac'
    } else if (osName.contains('win')) {
        javaFxPlatform = 'win'
    } else if (osName.contains('linux')) {
        javaFxPlatform = osArch in ['aarch64', 'arm64'] ? 'linux-aarch64' : 'linux'
    } else {
        throw new GradleException("Unsupported operating system: ${osName} (${osArch})")
    }

    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.4'

    implementation("org.openjfx:javafx-base:${javaFxVersion}:${javaFxPlatform}")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:${javaFxPlatform}")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:${javaFxPlatform}")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:${javaFxPlatform}")
}

test {
    useJUnitPlatform()

    testLogging {
        events 'passed', 'skipped', 'failed'

        showExceptions = true
        exceptionFormat = 'full'
        showCauses = true
        showStackTraces = true
        showStandardStreams = false
    }
}

application {
    mainClass = 'melodie.gui.Launcher'
}

jar {
    // A lean JAR file (i.e., without the dependencies packaged inside) is not needed.
    enabled = false
    // Rename its output anyway; Gradle forbids it clashing with the shadowJar output file, even for a disabled task.
    archiveClassifier = 'without-dependencies'
}

shadowJar {
    archiveFileName = 'Melodie.jar'
}

run {
    enableAssertions = true
    standardInput = System.in
    jvmArgs '--enable-native-access=javafx.graphics'
}

checkstyle {
    toolVersion = '14.1.0'
}
